feat: Gradle plugin for one-block project setup
Add storm-gradle-plugin, a standalone Gradle build publishing the
id("st.orm") plugin to the Gradle Plugin Portal, version-aligned with
the BOM from the same release tag.

Applying the plugin configures the whole Storm setup. Kotlin projects
(the org.jetbrains.kotlin.jvm plugin is applied) get the BOM,
storm-kotlin, storm-core (runtime), storm-metamodel-ksp on the ksp
configuration, and the storm-compiler-plugin variant matching the
project's Kotlin version, detected from the Kotlin plugin and
overridable via storm { compilerPluginVariant }. Java projects get the
BOM, storm-java21, storm-core, storm-metamodel-processor on
annotationProcessor, and the --enable-preview flags on compile, test,
and exec tasks that storm-java21's String Templates require; an
explicit non-21 toolchain fails fast, since JDK 21 preview class files
are version-locked and only load on JDK 21. A storm { } extension
provides the opt-outs.

The plugin has no compile-time dependency on the Kotlin Gradle plugin
or KSP: it reacts to plugin ids and wires dependencies by configuration
name. KSP itself stays in the user's plugins block because its version
is paired to the Kotlin version (KSP 2.3+ requires Kotlin 2.2+, so no
single bundled KSP covers Storm's Kotlin 2.0 to 2.4 range); a missing
KSP fails the build with the exact plugins-block line to add. The KSP
processor dependency is added eagerly because KSP inspects its
configuration without triggering Gradle's lazy dependency callbacks.

Tests: unit tests for the version matrix, TestKit functional tests for
both paths (declared-dependency assertions, offline), and a smoke test
compiling a real Kotlin 2.4 project against mavenLocal snapshots,
asserting the generated metamodel (gated behind -Dstorm.smoke=true).

CI builds the plugin after the reactor; the release workflow gains a
publish-gradle-plugin job (GRADLE_PUBLISH_KEY/SECRET secrets). The
first publication of the st.orm id must be performed manu